@@ -1,5 +1,9 @@
 2008-10-06  Richard Hult  <richard@imendio.com>
 
+	* src/dh-keyword-model.h: Whitespace cleanup.
+
+2008-10-06  Richard Hult  <richard@imendio.com>
+
 	* src/dh-search.c: (search_cell_data_func): Use the link instead
 	of getting the name directly from the model, saves a copy/free and
 	is more consistent with the other properties that we get.
